# uapml081

./: README.md  UAP.ipynb  pyproject.toml  requirements.txt
src/: app.py
